--- a/asset/css/style.css
+++ b/asset/css/style.css
@@ -21,6 +21,9 @@ img {
     height: 30px;
 }
 
+.bg-image {
+    background-image: url("/asset/image/testAccueil.jpg");
+}
 
 
         /*Style MOBILE*/
