--- a/public/asset/css/register.css
+++ b/public/asset/css/register.css
@@ -1,3 +1,17 @@
+.divider{
+    color:var(--text-white);
+}
+
+.form{
+    background-color: var(--bg-section);
+    color: var(--text-black);
+}
+
+.btn-register{
+    background-color:var(--primary-color);
+    
+}
+
 /*Style MOBILE*/
 @media screen and (min-width:320px) and (max-width:767px) {
     .sectionLog {
