--- a/public/asset/css/addCarpooling.css
+++ b/public/asset/css/addCarpooling.css
@@ -91,6 +91,7 @@
 
         .seat-option.selected {
             color: #000000;
+            border-color:var(--primary-color);
         }
 
         .submit-btn {
