--- a/public/asset/css/about.css
+++ b/public/asset/css/about.css
@@ -56,7 +56,7 @@
 .value-icon {
     width: 80px;
     height: 80px;
-    background: linear-gradient(45deg, var(--primary-color), var(--secondary-color));
+    background: var(--secondary-color);
     border-radius: 50%;
     display: flex;
     align-items: center;
